--- a/Source/FountainSharp/FountainSharp.Parse/FountainSharp.Parse.fsproj
+++ b/Source/FountainSharp/FountainSharp.Parse/FountainSharp.Parse.fsproj
@@ -15,20 +15,17 @@
     <DefineConstants>DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
-    <PlatformTarget>
-    </PlatformTarget>
+    <PlatformTarget></PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants></DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
     <GenerateTailCalls>true</GenerateTailCalls>
-    <PlatformTarget>
-    </PlatformTarget>
+    <PlatformTarget></PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -38,23 +35,23 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Common\AssemblyInfo.fs" />
     <Compile Include="..\..\..\..\..\pub_code\FSharp.Formatting\src\Common\Collections.fs">
       <Link>Common\Collections.fs</Link>
     </Compile>
     <Compile Include="..\..\..\..\..\pub_code\FSharp.Formatting\src\Common\StringParsing.fs">
       <Link>Common\StringParsing.fs</Link>
     </Compile>
-    <Compile Include="Fountain.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
     <Folder Include="Common\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FountainParser.fs" />
-    <Compile Include="Script.fsx" />
+    <Compile Include="FountainSyntax.fs" />
+    <None Include="Fountain_reference.fs" />
     <None Include="Fountain Syntax Reference.txt" />
+    <Compile Include="FountainParser.fs" />
     <None Include="Fountain Syntax Support TODO.md" />
     <None Include="Test_Script.txt" />
   </ItemGroup>
