--- a/Source/FountainSharp/FountainSharp.Parse/FountainSharp.Parse.fsproj
+++ b/Source/FountainSharp/FountainSharp.Parse/FountainSharp.Parse.fsproj
@@ -15,20 +15,17 @@
     <DefineConstants>DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
-    <PlatformTarget>
-    </PlatformTarget>
+    <PlatformTarget></PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants></DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
     <GenerateTailCalls>true</GenerateTailCalls>
-    <PlatformTarget>
-    </PlatformTarget>
+    <PlatformTarget></PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -39,6 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\AssemblyInfo.fs" />
+    <Compile Include="Collections.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
@@ -46,12 +44,7 @@
     <Folder Include="Old Code for Reference\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\..\..\pub_code\FSharp.Formatting\src\Common\Collections.fs">
-      <Link>Collections.fs</Link>
-    </Compile>
-    <Compile Include="..\..\..\..\..\pub_code\FSharp.Formatting\src\Common\StringParsing.fs">
-      <Link>StringParsing.fs</Link>
-    </Compile>
+    <Compile Include="StringParsing.fs" />
     <Compile Include="FountainSyntax.fs" />
     <Compile Include="FountainParser.fs" />
     <None Include="Fountain Syntax Support TODO.md" />
@@ -60,5 +53,6 @@
     <None Include="Old Code for Reference\Fountain_reference.fs" />
     <None Include="Old Code for Reference\FountainParser_reference.fs" />
     <None Include="FountainWorkingScript.fsx" />
+    <None Include="ListTests.fsx" />
   </ItemGroup>
 </Project>
