--- a/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Editor/Info.plist
+++ b/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Editor/Info.plist
@@ -24,9 +24,10 @@
 	<string>bryancostanich</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
-	<key>NSMainNibFile</key>
-	<string>MainMenu</string>
+	<key>NSMainStoryboardFile</key>
+	<string>Main</string>
 	<key>XSAppIconAssets</key>
 	<string>Resources/Images.xcassets/AppIcons.appiconset</string>
+	
 </dict>
 </plist>
