--- a/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Editor/FountainSharp.Editor.csproj
+++ b/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Editor/FountainSharp.Editor.csproj
@@ -16,7 +16,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;</DefineConstants>
+    <DefineConstants>__UNIFIED__;__UNIFIED__;DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
