getting closer to PCL compiling. netcore remove IEnumerable on string, so we have to call ToCharArray() :(

--- a/Source/FountainSharp/PortableProjects/FountainSharp.Parse.MobilePCL/FountainSharp.Parse.MobilePCL.fsproj
+++ b/Source/FountainSharp/PortableProjects/FountainSharp.Parse.MobilePCL/FountainSharp.Parse.MobilePCL.fsproj
@@ -17,7 +17,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug</OutputPath>
-    <DefineConstants>DEBUG</DefineConstants>
+    <DefineConstants>_MOBILEPCL_;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
     <PlatformTarget></PlatformTarget>
@@ -26,12 +26,14 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
-    <DefineConstants></DefineConstants>
+    <DefineConstants>_MOBILEPCL_</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
     <GenerateTailCalls>true</GenerateTailCalls>
     <PlatformTarget></PlatformTarget>
     <NoStdLib>true</NoStdLib>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
