--- a/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Parse.Tests.fsproj
+++ b/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Parse.Tests.fsproj
@@ -61,12 +61,12 @@
     <Folder Include="TestFiles\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\FountainSharp.Parse\FountainSharp.Parse.fsproj">
-      <Project>{5C25E5F6-6E91-4497-9DA0-CC5F6A1083B7}</Project>
-      <Name>FountainSharp.Parse</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\..\PortableProjects\FountainSharp.Parse.MobilePCL\FountainSharp.Parse.MobilePCL.fsproj">
+      <Project>{EF7FFC79-964B-41EC-A90F-BBDE329D2DFD}</Project>
+      <Name>FountainSharp.Parse.MobilePCL</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
