fixed the hardline break in action, and broke ALL THE THINGS\! YAY\!

--- a/Source/FountainSharp/FountainSharp.Parse/FountainSharp.Parse.fsproj
+++ b/Source/FountainSharp/FountainSharp.Parse/FountainSharp.Parse.fsproj
@@ -52,5 +52,6 @@
     <None Include="Test_Script.txt" />
     <None Include="FountainWorkingScript.fsx" />
     <None Include="FountainSyntaxDefinition.md" />
+    <None Include="FountainSyntaxDetails.md" />
   </ItemGroup>
 </Project>
