--- a/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Parse.Tests.fsproj
+++ b/Source/FountainSharp/TestProjects/FountainSharp.Parse.Tests/FountainSharp.Parse.Tests.fsproj
@@ -33,17 +33,17 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <Reference Include="nunit.framework">
-      <HintPath>..\..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="FsUnit.NUnit">
-      <HintPath>..\..\packages\FsUnit.1.4.1.0\lib\net45\FsUnit.NUnit.dll</HintPath>
-    </Reference>
-    <Reference Include="NHamcrest">
-      <HintPath>..\..\packages\FsUnit.1.4.1.0\lib\net45\NHamcrest.dll</HintPath>
-    </Reference>
     <Reference Include="FSharp.Core">
       <HintPath>..\..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\packages\NUnit.3.4.1\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="FsUnit.NUnit">
+      <HintPath>..\..\packages\FsUnit.2.3.1\lib\net45\FsUnit.NUnit.dll</HintPath>
+    </Reference>
+    <Reference Include="NHamcrest">
+      <HintPath>..\..\packages\FsUnit.2.3.1\lib\net45\NHamcrest.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
