update to Nuget v3, move FountainSharp.Editor out of FountainSharp.Parse.Tests folder

--- a/Source/FountainSharp/PortableProjects/FountainSharp.Parse.MobilePCL/FountainSharp.Parse.MobilePCL.fsproj
+++ b/Source/FountainSharp/PortableProjects/FountainSharp.Parse.MobilePCL/FountainSharp.Parse.MobilePCL.fsproj
@@ -20,7 +20,8 @@
     <DefineConstants>_MOBILEPCL_;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
-    <PlatformTarget></PlatformTarget>
+    <PlatformTarget>
+    </PlatformTarget>
     <NoStdLib>true</NoStdLib>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -30,11 +31,13 @@
     <ErrorReport>prompt</ErrorReport>
     <ConsolePause>false</ConsolePause>
     <GenerateTailCalls>true</GenerateTailCalls>
-    <PlatformTarget></PlatformTarget>
+    <PlatformTarget>
+    </PlatformTarget>
     <NoStdLib>true</NoStdLib>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
   </PropertyGroup>
+  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\4.0\Framework\v4.0\Microsoft.Portable.FSharp.Targets" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="..\..\FountainSharp.Parse\Collections.fs">
@@ -55,16 +58,9 @@
     <Compile Include="..\..\FountainSharp.Parse\Fountain.fs">
       <Link>Fountain.fs</Link>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="ScratchRenamed.fsx" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core">
-      <HintPath>..\..\packages\FSharp.Core.4.0.0.1\lib\portable-net45+netcore45\FSharp.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
+    <BundleResource Include="project.json" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\4.0\Framework\v4.0\Microsoft.Portable.FSharp.Targets" />
 </Project>
