--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.lock.json
+*.nuget.props
+*.nuget.targets
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -129,7 +132,7 @@ publish/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
