--- a/Source/FountainSharp/TestProjects/FountainSharp.Editor/FountainSharp.Editor.csproj
+++ b/Source/FountainSharp/TestProjects/FountainSharp.Editor/FountainSharp.Editor.csproj
@@ -50,9 +50,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.Mac" />
-    <Reference Include="FSharp.Core">
-      <HintPath>..\..\..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
-    </Reference>
+    <Reference Include="FSharp.Core" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Resources\Images.xcassets\AppIcons.appiconset\Contents.json" />
@@ -93,9 +91,9 @@
     <BundleResource Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\PortableProjects\FountainSharp.Parse.MobilePCL\FountainSharp.Parse.MobilePCL.fsproj">
-      <Project>{EF7FFC79-964B-41EC-A90F-BBDE329D2DFD}</Project>
-      <Name>FountainSharp.Parse.MobilePCL</Name>
+    <ProjectReference Include="..\..\FountainSharp.Parse\FountainSharp.Parse.fsproj">
+      <Project>{5C25E5F6-6E91-4497-9DA0-CC5F6A1083B7}</Project>
+      <Name>FountainSharp.Parse</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
