--- a/Source/FountainSharp/TestProjects/FountainSharp.Editor/project.json
+++ b/Source/FountainSharp/TestProjects/FountainSharp.Editor/project.json
@@ -1,7 +1,5 @@
 ﻿{
-  "dependencies": {
-    "FSharp.Core": "4.0.0.1"
-  },
+  "dependencies": {},
   "frameworks": {
     ".NETFramework,Version=v4.5": {}
   },
