--- a/Source/TestProjects/FountainSharp.Editor/FountainSharp.Editor.csproj
+++ b/Source/TestProjects/FountainSharp.Editor/FountainSharp.Editor.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
+    <None Include="project.json.bak" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
@@ -86,9 +87,6 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Scripts\SimpleTest.fountain" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="project.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\FountainSharp.Parse\FountainSharp.Parse.fsproj">
