--- a/nuspec/FountainSharp.nuspec
+++ b/nuspec/FountainSharp.nuspec
@@ -2,7 +2,6 @@
 <package >
   <metadata>
     <id>FountainSharp</id>
-    <version>1.0.0-pre01</version>
     <title>FountainSharp</title>
     <authors>Bryan Costanich</authors>
     <owners>Bryan Costanich</owners>
@@ -32,11 +31,11 @@
   </metadata>
   <files>
     <!-- .NET Standard 1.6 -->
-    <file src="FountainSharp.Parse.NetStandard/bin/Release/netstandard1.6/FountainSharp.Parse.NetStandard.dll" target="lib/netstandard1.6" />
+    <file src="../Source/FountainSharp.Parse.NetStandard/bin/Release/netstandard1.6/FountainSharp.Parse.NetStandard.dll" target="lib/netstandard1.6" />
     <!-- .NET Standard 1.1 -->
-    <file src="FountainSharp.Parse.MobilePCL/bin/Release/FountainSharp.Parse.MobilePCL.dll" target="lib/netstandard1.1" />
-    <!-- PCL --
-    <file src="FountainSharp.Parse.MobilePCL/bin/Release/FountainSharp.Parse.MobilePCL.dll" target="lib/portable-net45+win+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
-    >
+    <file src="../Source/FountainSharp.Parse.MobilePCL/bin/Release/FountainSharp.Parse.MobilePCL.dll" target="lib/netstandard1.1" />
+    <!-- PCL
+    <file src="../Source/FountainSharp.Parse.MobilePCL/bin/Release/FountainSharp.Parse.MobilePCL.dll" target="lib/portable-net45+win+MonoTouch10+MonoAndroid10+xamarinmac20+xamarintvos10+xamarinwatchos10+xamarinios10" />
+    -->
   </files>
 </package>
